# Platformer2D-rust

./: .rustfmt.toml  Cargo.toml
assets/levels/: temples.json
config/: controls.json
levels/: temples.json
src/: app.rs  camera.rs  controls.rs  editor_menu.rs  entity.rs  event.rs  level.rs  main.rs  text.rs  ui.rs
src/assets/levels/: temples.json
