[package]
name = "platformer_2d"
version = "0.1.0"
authors = ["danielbartsch <daniel.bartsch@adverity.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.32.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"